--- a/server/CRM_hack/projects/src/main/resources/application.properties
+++ b/server/CRM_hack/projects/src/main/resources/application.properties
@@ -21,16 +21,17 @@ logging.level.org.springframework.security=TRACE
 # Keycloak
 keycloak.realm=auth
 #keycloak.realm=${KEYCLOAK_REALM}
-keycloak.url=http://194.87.186.59:8080
+keycloak.url=https://ad-4stra.ru/auth
 #keycloak.url=${KEYCLOAK_URL}
-keycloak.client_secret=zThmHP3m3Wl5QIscj7t3Nf9ZOyAOPTRz
+# keycloak.client_secret=zThmHP3m3Wl5QIscj7t3Nf9ZOyAOPTRz
 #keycloak.client_secret=${CLIENT_SECRET}
- keycloak.resource=dwh-manager
+keycloak.resource=dwh-manager
 #keycloak.resource=${CLIENT_ID}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.url}/realms/${keycloak.realm}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 jwt.auth.converter.principal-attribute=principal_username
-
+keycloak.admin.username=admin
+keycloak.admin.password=admin
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.socket=DEBUG
