--- a/server/CRM_hack/projects/src/main/resources/application.properties
+++ b/server/CRM_hack/projects/src/main/resources/application.properties
@@ -18,6 +18,10 @@ client.retry_attempts=3
 client.retry_delay_millis = 1000
 logging.level.org.springframework.security=TRACE
 
+# Swagger
+swagger.server.url=https://ad-4stra.ru/api
+
+
 # Keycloak
 keycloak.realm=auth
 #keycloak.realm=${KEYCLOAK_REALM}
