--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.13"
   }
 }
