--- a/server/CRM_hack/projects/src/main/resources/application.properties
+++ b/server/CRM_hack/projects/src/main/resources/application.properties
@@ -20,6 +20,9 @@ logging.level.org.springframework.security=TRACE
 
 # Swagger
 swagger.server.url=https://ad-4stra.ru/api
+server.forward-headers-strategy=native
+server.use-forward-headers=true
+server.servlet.context-path=/api
 
 
 # Keycloak
