--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.4'
 services:
   projects:
     build:
-      context: ./server/CRM_hack
-      dockerfile:  /projects/Dockerfile
+      dockerfile:  ./server/CRM_hack/projects/Dockerfile
     ports:
       - "8082:8082"
     restart: always
@@ -16,5 +15,5 @@ services:
       context: ./client
     container_name: reactClient
     ports:
-      - "3000:3000"
+      - "8081:3000"
     restart: always
