--- a/server/CRM_hack/projects/Dockerfile
+++ b/server/CRM_hack/projects/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.9.0-eclipse-temurin-19 AS build
+FROM maven:3.8.4-openjdk-17-slim AS build
 WORKDIR /app
 COPY pom.xml .
 COPY projects/pom.xml projects/
@@ -9,7 +9,7 @@ RUN mvn clean install -DskipTests
 WORKDIR /app/projects
 RUN mvn -o compile
 
-FROM openjdk:19-jdk-slim
+FROM openjdk:17-jdk-slim
 WORKDIR /app
 COPY --from=build /app/projects/target/*.jar /app/app.jar
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
