--- a/server/CRM_hack/projects/src/main/resources/application.properties
+++ b/server/CRM_hack/projects/src/main/resources/application.properties
@@ -36,7 +36,7 @@ keycloak.resource=dwh-manager
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.url}/realms/${keycloak.realm}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 jwt.auth.converter.principal-attribute=principal_username
-keycloak.admin.username=admin
+keycloak.admin.username=asafonin@edu.hse.ru
 keycloak.admin.password=admin
 
 logging.level.org.springframework.web=DEBUG
