--- a/server/CRM_hack/pom.xml
+++ b/server/CRM_hack/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>projects</module>
+        <module>inegrations</module>
     </modules>
 
     <properties>
