--- a/server/CRM_hack/projects/Dockerfile
+++ b/server/CRM_hack/projects/Dockerfile
@@ -1,5 +1,7 @@
 FROM maven:3.8.4-openjdk-17-slim AS build
 WORKDIR /app
+COPY ./server/CRM_hack/integrations/pom.xml integrations/
+COPY ./server/CRM_hack/integrations/src integrations/src
 COPY ./server/CRM_hack/pom.xml .
 COPY ./server/CRM_hack/projects/pom.xml projects/
 COPY ./server/CRM_hack/projects/src projects/src
