--- a/server/CRM_hack/projects/pom.xml
+++ b/server/CRM_hack/projects/pom.xml
@@ -245,6 +245,12 @@
             <version>6.2.4.Final</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
