--- a/server/CRM_hack/projects/pom.xml
+++ b/server/CRM_hack/projects/pom.xml
@@ -246,10 +246,17 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Dozer with exclusion of javax.validation:validation-api -->
         <dependency>
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
             <version>5.5.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.validation</groupId>
+                    <artifactId>validation-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
