--- a/server/CRM_hack/projects/src/main/resources/application.properties
+++ b/server/CRM_hack/projects/src/main/resources/application.properties
@@ -27,7 +27,7 @@ server.servlet.context-path=/api
 # Keycloak
 keycloak.realm=auth
 #keycloak.realm=${KEYCLOAK_REALM}
-keycloak.url=https://ad-4stra.ru/auth
+keycloak.url=http://detulie.space:8080
 #keycloak.url=${KEYCLOAK_URL}
 # keycloak.client_secret=zThmHP3m3Wl5QIscj7t3Nf9ZOyAOPTRz
 #keycloak.client_secret=${CLIENT_SECRET}
