create task done. mapper configured

--- a/server/CRM_hack/projects/pom.xml
+++ b/server/CRM_hack/projects/pom.xml
@@ -246,17 +246,10 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Dozer with exclusion of javax.validation:validation-api -->
         <dependency>
-            <groupId>net.sf.dozer</groupId>
-            <artifactId>dozer</artifactId>
-            <version>5.5.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.validation</groupId>
-                    <artifactId>validation-api</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.1</version>
         </dependency>
     </dependencies>
 
