--- a/server/CRM_hack/inegrations/src/main/resources/application.properties
+++ b/server/CRM_hack/inegrations/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 # Settings
 server.port=8083
-projects.url="https://localhost:8082"
+projects.url=http://localhost:8082
 client.timeout=10000
 # converter.url=${CONVERTER_URL}
 client.retry_attempts=3
