--- a/client/dockerfile
+++ b/client/dockerfile
@@ -2,12 +2,22 @@ FROM node:18 AS build
 
 WORKDIR /client
 
-COPY /public/ /client/public
-COPY /src/ /client/src
-COPY /package.json /client/
-COPY /tailwind.config.js /client/
+# Copy package.json and package-lock.json (if present)
+COPY package.json package-lock.json* ./
 
+# Install dependencies
 RUN npm install
 
-RUN npx tailwindcss -i /client/src/App.css -o /client/src/Tailwind.css
+# Copy the rest of your application's code
+COPY public/ ./public/
+COPY src/ ./src/
+COPY tailwind.config.js ./
+
+# Build Tailwind CSS
+RUN npx tailwindcss -i ./src/App.css -o ./src/Tailwind.css
+
+# Expose the port (if needed)
+# EXPOSE 3000
+
+# Start the application
 CMD ["npm", "start"]
