--- a/client/package.json
+++ b/client/package.json
@@ -50,5 +50,6 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.13"
-  }
+  },
+  "proxy": "http://detulie.space:8080"
 }
